# tas

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml  python.yml
certs/: .gitignore
certs/kmipjson/: .gitignore
certs/policy/: .gitignore  demo_signer.py  example_policy.json  sev_example_policy.json  tdx_example_policy.json
certs/tas/: .gitignore
certs/thales_ctm/: .gitignore  README.md  dummy_ca_cert.pem  dummy_cert.pem  dummy_key.pem
config/: cert_local_config.yaml  kbm_mock_config.yaml  tas_config.yaml
config/kmipjson/: kmip.conf
config/pykmip/: pykmip.conf
config/thales_ctm/: thales_ctm.yaml
docs/: CERTIFY.md  CONFIG.md  POLICY.md  REDIS_PERSISTENCE.md  openapi.json  openapi.yaml
plugins/: tas_cert_local.py  tas_kbm_kmip.py  tas_kbm_kmip_json.py  tas_kbm_mock.py  tas_kbm_thales_ctm.py
plugins/kjc/: kmip_json_client.py
scripts/: generate_test_certs.sh  kbm_mock_secret_writer.py
tas/: client_routes.py  config.py  config_loader.py  deprecated_routes.py  error_handlers.py  experimental_routes.py  management_routes.py  nonce.py  policy_helper.py  tas_logging.py  tas_vm.py
tas/auth/: __init__.py  api_key.py  base.py  client_auth.py  management_auth.py
tests/: conftest.py  test_config_loader.py  test_error_handling.py  test_kbm_ctm_locking.py  test_kbm_mock_sqlite.py  test_kbm_plugin_contract.py  test_management_routes.py  test_nonce_validation.py  test_policy_helper.py  test_policy_key_validation.py  test_tas_vm.py
(+11 files in other folders)
