# Copyright 2025 Hewlett Packard Enterprise Development LP.
# SPDX-License-Identifier: MIT
#
# This file is part of the TEE Attestation Service.


[project]
name = "TAS"
version = "0.1.0-alpha"
requires-python = ">=3.10"

[tool.isort]
profile = "black"
known_third_party = ["sev_pytools", "tdx_pytools"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[project.optional-dependencies]
# Development/test-only dependencies. Install with: pip install -e ".[dev]"
# `spiffe` (py-spiffe, maintained by HPE) is used purely as a test oracle to
# independently validate that issued leaf certificates are well-formed
# X509-SVIDs. It is NOT a runtime dependency of the service.
dev = [
    "spiffe>=0.3,<0.4",
]